# mingcode-agent

./: COMPARISON.md  LEARNING_PATH.md  MINGCODE_LEARNING_ROADMAP.md  README.md  build.bat  index.html  main.py  mingcode-lc.spec  mingcode.spec  pyproject.toml  requirements.txt  setup.iss
config/: __init__.py  config.py
core/: __init__.py  agent.py  cognitive.py  cognitive_graph.py  executor.py  knowledge_base.py  llm.py  long_term_memory.py  memory.py  planner.py  qq_official.py  qq_onebot.py  reflector.py  self_asker.py  subagent.py  todo.py  token_tracker.py  wechat_bot.py
docs/superpowers/plans/: 2026-07-03-computer-vision.md  2026-07-04-cognitive-controller-phase1.md  2026-07-04-cognitive-controller-phase2.md  2026-07-04-cognitive-controller-phase3.md  2026-07-04-cognitive-controller-phase4.md  2026-07-04-reasoning-effort.md  2026-07-05-langchain-version-phase0.md  2026-07-05-langchain-version-phase1.md  2026-07-05-langchain-version-phase2.md  2026-07-05-langchain-version-phase3.md  2026-07-05-langchain-version-phase4.md
docs/superpowers/specs/: 2026-06-30-subagent-design.md  2026-07-03-computer-vision-design.md  2026-07-04-cognitive-controller-design.md  (+2 more)
superpowers/plans/: 2026-06-30-subagent.md
tests/: conftest.py  test_agent.py  test_ask_user.py  test_callbacks.py  test_cognitive_controller.py  test_cognitive_graph.py  test_computer_vision.py  test_config.py  test_executor.py  test_im_import.py  test_knowledge_base.py  test_llm.py  test_long_term_memory_lock.py  test_main_cli.py  test_memory.py  test_memory_compress.py  test_new_tools.py  test_office_tools.py  test_parallel_execution.py  test_plan_tot.py  test_planner.py  test_reasoning_effort.py  test_reflector.py  test_sanitize_messages.py  test_self_asker.py  test_subagent.py  test_subagent_tool.py  test_todo.py  test_todo_tool.py  test_token_tracker.py  test_tools_advanced.py  test_tools_aux.py  test_tools_basic.py  test_tools_other.py  test_tools_registry.py  test_tools_search.py
tools/: __init__.py  ask_user.py  base.py  code.py  computer_use.py  files.py  git_tool.py  http_tool.py  kb_tool.py  math_tool.py  office.py  plan_tot.py  search.py  shell.py  subagent.py  time_tool.py  todo.py
ui/: __init__.py  callbacks.py  console.py  theme.py
