[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mingcode"
version = "1.4.0"
description = "MINGCODE - Cyberpunk AI coding assistant"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "duckduckgo-search>=3.0.0",
    "pygments>=2.10.0",
    "qrcode>=7.3.1",
    "websocket-client>=1.6.0",
    "cryptography>=41.0.0",
    "python-docx>=1.0.0",
    "pypdf>=4.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "reportlab>=4.0.0",
]

[project.scripts]
mingcode = "main:main"

[tool.setuptools]
py-modules = []
